feat: adjust Entity and services to validations